2015-04-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2670_DOCS_IF.pm: new discovery
	parameter: RFC2670_DOCS_IF::disable-downstreams

2015-03-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP_Params.pm: "aes128cfb" is invalid
	value for snmp-privprotocol, should be "aes"

2015-01-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm: DNS errors treated as host
	unreachable; reachability statistics more accurate

2015-01-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RPC.pm (rpc_timeseries): added DATAONLY
	parameter for TIMESERIES RPC call

	* perllib/Torrus/Renderer/RPC.pm: AGGREGATE_DS RPC call now works
	for leaves without MAX RRA

2015-01-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_hrules): using
	skipscale for horizontal rules (requires rrdtool-1.4.8 or newer)

2014-12-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/F5BigIp.pm: added system performance
	statistics and 64-bit interface counters

2014-12-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	new discovery parameter: RFC2863_IF_MIB::disable-all

2014-12-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm: now hrules are drawn with
	semi-transparent LINE1

	* xmlconfig/defaults.xml: two new horizontal rules: warn-level,
	crit-level

2014-12-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/defaults.xml: moved monitor-period and
	monitor-timeoffset from snmp-defs.xml

	* bin/monitor.in: new CLI option: --runalways

	* configs/torrus-config.pl: new configuration parameters:
	$Torrus::Collector::runAlways = 0;
	$Torrus::Monitor::runAlways = 0;

2014-11-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
