@@ -91,8 +91,11 @@ my @varbindlist = ( $Torrus::Snmptrap::enterprise . '.2',
                     INTEGER32, $severity,
 
                     $Torrus::Snmptrap::enterprise . '.9',
-                    OCTET_STRING, $ENV{'TORRUS_MCOMMENT'}
-                    );
+                    OCTET_STRING, $ENV{'TORRUS_MCOMMENT'},
+
+                    $Torrus::Snmptrap::enterprise . '.10',
+                    OCTET_STRING, $ENV{'TORRUS_NPCOMMENT'},
+    );
 
 foreach my $host ( @Torrus::Snmptrap::hosts )
 {
